--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -89,7 +89,7 @@ label {
   margin-bottom: 10px;
 }
 
-input[type="email"],
+input[type="text"],
 input[type="password"] {
   width: 100%;
   padding: 10px;
